# myl

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt
cmake/: files.cmake  toolchain.cmake  utility.cmake
cmake/presets/: clang.json  common.json  generator.json  msvc.json
cmake/toolchain/: cl.cmake  clang-cl.cmake  windows-x86_64-clang-cl.cmake  windows-x86_64-msvc.cmake  windows.cmake
include/myl/: algorithm.hpp  bit.hpp  circulator.hpp  color.hpp  config.hpp  constants.hpp  cpu.hpp  cyclic_buffer.hpp  defines.hpp  definitions.hpp  endian.hpp  exception.hpp  intrinsic.hpp  io.hpp  iterative.hpp  macro.hpp  math.hpp  memory.hpp  numbers.hpp  platform.hpp  random.hpp  shaping.hpp  static_vector.hpp  string.hpp  stringify.hpp  timer.hpp  type.hpp  uuid.hpp  version.hpp
include/myl/ex/: algebra.hpp  built_in.hpp  colony.hpp  concept.hpp  deque.hpp  devector.hpp  enum.hpp  (+13 more)
include/myl_wip/: color.hpp  command_line.hpp  cyclic_buffer.hpp  demangle.hpp  iterative.hpp  memory.hpp  ring_buffer.hpp  shaping.hpp  static_vector.hpp  uuid.hpp
src/myl/: cpu.cpp  endian.cpp  exception.cpp  uuid.cpp
tests/: CMakeLists.txt  algorithm.cpp  bit.cpp  color.cpp  color.test.hpp  io.cpp  macro.cpp  ring_buffer.cpp  shaping.cpp  static_vector.cpp  string.cpp  type.cpp  version.cpp
tests/math/: exponential.cpp  mat2x2.cpp  mat2x3.cpp  mat2x4.cpp  mat3x2.cpp  mat3x3.cpp  mat3x4.cpp  mat4x2.cpp  mat4x3.cpp  mat4x4.cpp  mat_common.cpp  trigonometry.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vec_common.cpp
tests/utility/: matrix_approx.hpp
tests/wip/: color.cpp
(+28 files in other folders)
